layout updated, category page added

--- a/src/components/layout/defaultLayout.style.css
+++ b/src/components/layout/defaultLayout.style.css
@@ -1,3 +1,33 @@
+.default-layout {
+	display: grid;
+	grid-template-columns: 250px auto;
+}
+
+.navbar-text {
+	margin-right: 1rem;
+}
+
 .left-bar {
 	background: rgb(26, 25, 25);
+	height: 100vh;
+	color: white;
+	/* width: 33%; */
+	top: 0;
+	left: 0;
+	overflow-x: hidden;
+	z-index: 99;
+}
+
+.main {
+	/* width: auto; */
+}
+
+.footer {
+	background: grey;
+	color: wheat;
+	min-height: 100px;
+	position: fixed;
+	width: 100%;
+	padding: 1rem;
+	margin-top: 1rem;
 }
