--- a/src/components/layout/defaultLayout.style.css
+++ b/src/components/layout/defaultLayout.style.css
@@ -9,9 +9,10 @@
 
 .left-bar {
 	background: rgb(26, 25, 25);
-	height: 100%;
+	height: 100vh;
 	color: white;
 	/* width: 33%; */
+	/* position: fixed; */
 	top: 0;
 	left: 0;
 	overflow-x: hidden;
